--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,28 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">11dp</item>
     </style>
+
+    <style name="DetailImageStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">417dp</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="DetailTitleStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="DetailDescriptionStyle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
 </resources>
