--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,11 +29,17 @@
             android:layout_below="@+id/detail_title"
             android:text="@string/description_detail" />
 
+        <TextView
+            android:id="@+id/detail_info"
+            style="@style/DetailInfo"
+            android:layout_below="@+id/detail_description"
+            android:text="@string/detail_info" />
+
         <Button
             android:id="@+id/action_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_description"
+            android:layout_below="@+id/detail_info"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
